# iceberg-mcp

./: .gitignore  Cargo.toml  Changes.md  README.md
.github/workflows/: ci.yml
src/: main.rs  server.rs  utils.rs
src/catalog/: glue.rs  mod.rs  rest.rs
