[package]
name = "iceberg-mcp"
description = "Apache Iceberg Model Context Protocol (MCP) Server"
version = "0.1.0"
edition = "2024"
authors = ["Morris Tai <morristai@apache.org>"]

[dependencies]
rmcp = { version = "0.8.3", features = ["server", "transport-io"] }
iceberg = "0.6"
iceberg-catalog-rest = "0.6"
iceberg-catalog-glue = "0.6"
anyhow = "1"
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
typed-builder = "0.21"
schemars = "1.0.4"